Demand support for at least c++0x standard. Add plugin interface modifications from local repository.
git-svn-id: https://svnsrv.desy.de/basic/PandoraPFANew/TestPandora/LArReco/trunk@1697 e861a63a-b6b5-47dc-a5de-b4304083765c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,12 @@ ENDIF()
 
 #include directories
 INCLUDE_DIRECTORIES( ./include )
-ADD_DEFINITIONS( "-Wall -ansi -pedantic -Wno-long-long -Wno-sign-compare -fno-strict-aliasing" )
+
+# require proper C++
+ADD_DEFINITIONS( "-Wall -ansi -pedantic -std=c++0x" )
+
+# need long long for int64 for now
+ADD_DEFINITIONS( "-Wno-long-long -Wno-sign-compare -fno-strict-aliasing" )
 
 AUX_SOURCE_DIRECTORY( ./src sources )
 ADD_SHARED_LIBRARY( ${PROJECT_NAME} ${sources} )
