Support older cmake versions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${${PROJECT_NAME}_VERSI
 # - Executable
 add_executable(PandoraInterface ${PROJECT_SOURCE_DIR}/test/PandoraInterface.cxx)
 if(PANDORA_MONITORING)
-    target_include_directories(PandoraInterface PUBLIC ${ROOT_INCLUDE_DIRS})
+    include_directories(${ROOT_INCLUDE_DIRS})
     target_link_libraries(PandoraInterface ${ROOT_LIBRARIES})
 endif()
 target_link_libraries(PandoraInterface ${PROJECT_NAME})
