--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ set(${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_
 # Dependencies
 include(PandoraCMakeSettings)
 
+# Prefer local include directory to any paths to installed header files
+include_directories(include)
+
 find_package(PandoraSDK 02.01.00 REQUIRED)
 find_package(LArContent 02.03.00 REQUIRED)
 
@@ -63,9 +66,6 @@ endif()
 
 #-------------------------------------------------------------------------------------------------------------------------------------------
 # Build products
-
-#- include directories
-include_directories(include)
 
 # - Collect sources - not ideal because you have to keep running CMake to pick up changes
 file(GLOB_RECURSE LAR_RECO_SRCS RELATIVE ${PROJECT_SOURCE_DIR} "src/*.cxx")
