Provisional build updates for optional DL algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,14 @@ include(PandoraCMakeSettings)
 include_directories(include)
 
 find_package(PandoraSDK 03.04.01 REQUIRED)
-find_package(LArContent 03.21.00 REQUIRED)
+if(TORCHLIB)
+    set(LAR_CONTENT_LIBRARY_NAME "LArDLContent")
+else()
+    set(LAR_CONTENT_LIBRARY_NAME "LArContent")
+endif()
+find_package(${LAR_CONTENT_LIBRARY_NAME} 03.21.00 REQUIRED)
 
-foreach(package PandoraSDK LArContent)
+foreach(package PandoraSDK ${LAR_CONTENT_LIBRARY_NAME})
     if(${package}_FOUND)
         include_directories(${${package}_INCLUDE_DIRS})
         link_libraries(${${package}_LIBRARIES})
